syntax = "proto3";
option java_multiple_files = true;
package cdx.opencdx.grpc.questionnaire;

import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "anf_connector.proto";
import "common.proto";

// TODO: Questionnaire Status
enum QuestionnaireStatus {
  draft = 0;
  active = 1;
  retired = 2;
  unknown = 3;
}

/**
 * Represents a FHIR questionnaire collection.
 */
message Questionnaires {
  repeated Questionnaire questionnaires = 1;  // Questionnaire Resource List
  cdx.opencdx.grpc.common.Pagination pagination = 2; // Pagination information and sorting.
}


/**
 * Represents a FHIR questionnaire.
 */
message Questionnaire {
  optional string id = 1;  // Resource Id
  optional string resource_type = 2; // Resource type identifier.
  optional string title = 3; // Title of the questionnaire.
  optional QuestionnaireStatus status = 4; // Status of the questionnaire (e.g., draft).
  optional string description = 5; // Description of the questionnaire.
  optional string purpose = 6; // Purpose of the questionnaire
  repeated QuestionnaireItem item = 7; // List of questionnaire items.

  // Field for storing user submission information
  optional string rule_id = 8; // Id of the rule that was executed for the submission

  optional google.protobuf.Timestamp created = 9; // Timestamp when this event was created.
  optional google.protobuf.Timestamp modified = 10; // Timestamp when this event was modified.
  optional string creator = 11; // ID of the creator of this event.
  optional string modifier = 12; // ID of the modifier of this event.
}

/**
 * Represents a question or group of questions within a questionnaire.
 */
message QuestionnaireItem {
  optional string type = 1; // Type of the questionnaire item (e.g., integer, boolean, choice).
  optional string link_id = 2; // Unique identifier for the item.
  optional string text = 3; // Text content of the item.
  repeated QuestionnaireEnableWhen enable_when = 4; // Conditional display logic for questions
  optional string enable_behavior = 5; // Show questions when all or any conditions are true
  optional bool required = 6; // Indicates if the item is required.
  optional bool repeats = 7; // Indicates if the item can be repeated.
  optional bool read_only = 8; // Indicates if the item is read-only.
  repeated Code code = 9; // A terminology code that corresponds to this group or question
  repeated QuestionnaireItem item = 10; // Nested questionnaire items.
  repeated QuestionnaireItemExtension extension = 11; // Extensions for the item.
  repeated QuestionnaireItemAnswerOption answer_option = 12; // Answer options for choice-type items.
  repeated QuestionnaireItemInitial initial = 13; // Initial values for the item.

  // Field for storing user responses
  optional google.protobuf.Any submission_user_response = 14; // User-provided response to the item

  repeated cdx.opencdx.grpc.anf.AnfStatementConnector anf_statement_connector = 15; // ANF statement connector
}

/**
 * Represents conditional display of questions
 */
message QuestionnaireEnableWhen {
  optional string question = 1; // Question id
  optional string operator = 2; // Operator for conditional display
  optional Coding answer_coding = 3; // Answer options for choice question type
  optional int32 answer_integer = 4; // Answer option for integer question type
  optional double answer_double = 5; // Answer option for double question type
  optional bool answer_boolean = 6; // Answer option for boolean question type
}

/**
 * A terminology code that corresponds to this group or question
 */
message Code {
  optional string system = 1; // System code
  optional string code = 2; // TODO: code
}

/**
 * Represents an extension for a questionnaire item.
 */
message QuestionnaireItemExtension {
  optional string url = 1; // URL for the extension.
  optional ValueCodeableConcept value_codeable_concept = 2; // Value for code-able concept extensions.
  optional Coding value_coding = 3; // TODO: value coding
  optional int32 value_integer = 4; // TODO: value integer
  optional double value_decimal = 5; // TODO: value decimal
}

/**
 * Represents a code-able concept value.
 */
message ValueCodeableConcept {
  optional string text = 1; // Text content for code-able concept values.
  repeated Coding coding = 2; // Coded values for code-able concepts.
}

/**
 * Represents a coding value.
 */
message Coding {
  optional string system = 1; // Code system for the coded value.
  optional string code = 2; // Code for the coded value.
  optional string display = 3; // Display text for the coded value.
}

/**
 * Represents an answer option for a questionnaire item.
 */
message QuestionnaireItemAnswerOption {
  optional Coding value_coding = 1; // Coding value for answer options.
  optional bool initial_selected = 2; // Indicates if the option is initially selected.
  repeated Extension extension = 3; // TODO : extension
}

// TODO: extension
message Extension {
  optional string url = 1; // TODO: url
  optional double value_decimal = 2; // TODO: value decimal
  optional Coding value_codeable_concept = 3; // TODO: value codeable concept
}

/**
 * Represents initial values for a questionnaire item.
 */
message QuestionnaireItemInitial {
  optional bool value_boolean = 1; // Initial boolean value for the item.
  optional int32 value_integer = 2; // Initial value for integer question type
  optional double value_decimal = 3; // Initial value for decimal question type
}

/*
 * Represents the message with specified fields.
 */
message QuestionnaireData {
  optional string id = 1; // Unique identifier for the message.
  optional string name = 2; // Questionnaire name.
  optional string status = 3; // Current status of the message.
  optional string state = 4; // State of the questionnaire (active or inactive).
  optional string question_json_id = 5; // JSON to be displayed to the end user.
  optional string question_anf_json = 6; // JSON field for ANF statements.
  optional string rules_engine_config = 7; // Associated Rules engine configuration.

  optional google.protobuf.Timestamp created = 8; // Timestamp when this event was created.
  optional google.protobuf.Timestamp modified = 9; // Timestamp when this event was modified.
  optional string creator = 10; // ID of the creator of this event.
  optional string modifier = 11; // ID of the modifier of this event.
}

/* 
 * Represents the message with specified fields at system level
 */
message SystemQuestionnaireData {
  repeated QuestionnaireData questionnaire_data = 1; // Questionnaire data.
}

/* 
 * Represents the message with specified fields, with associated Organization and Workspace
 */
message ClientQuestionnaireData {
  repeated QuestionnaireData questionnaire_data = 1; // Questionnaire data.
  optional string organization_id = 2; // Organization Id associated with the Questionnaire data.
  optional string workspace_id = 3; // Workspace Id associated with the Questionnaire data.
  optional string rule_id=4; // Id of the rule to be executed on Rules Engine upon submission
}

/* 
 * Represents the message with specified fields, with associated Organization, Workspace, and User
 */
message UserQuestionnaireData {
  repeated QuestionnaireData questionnaire_data = 1; // Questionnaire data.
  optional string user_id = 2; // User identifier.
}

/**
 * Represents a ruleset for the rule engine.
 */
 message RuleSet {
  optional string rule_id = 1;  // Unique identifier for the rule.
  optional string type = 2;     // Type of the rule (e.g., business rule).
  optional string category = 3; // Category of the rule.
  optional string description = 4;  // Description of the rule.
}

/**
 * Represents the request to retrieve rules at the client level.
 */
message ClientRulesRequest {
  optional string organization_id = 1; // Organization Id associated with the Questionnaire data.
  optional string workspace_id = 2; // Workspace Id associated with the Questionnaire data.
}

/**
 * Represents the response for the GetRuleSets operation.
 */
 message RuleSetsResponse {
  repeated RuleSet rule_sets = 1;  // List of rule sets available.
}

/**
 * Service for handling FHIR questionnaires.
 // TODO: more on FHIR
 */
service QuestionnaireService {
  rpc GetRuleSets(ClientRulesRequest) returns (RuleSetsResponse);    // Operation to get rule sets for specific client
  
  rpc CreateQuestionnaire(QuestionnaireRequest) returns (Questionnaire); // Submits a questionnaire and returns the submission status.
  rpc UpdateQuestionnaire(QuestionnaireRequest) returns (Questionnaire); // Submits a questionnaire to be updated.
  rpc GetSubmittedQuestionnaire(GetQuestionnaireRequest) returns (Questionnaire); // Get submitted questionnaire data by id.
  rpc GetSubmittedQuestionnaireList(GetQuestionnaireListRequest) returns (Questionnaires); // Get all submitted questionnaire data.
  rpc DeleteSubmittedQuestionnaire(DeleteQuestionnaireRequest) returns (SubmissionResponse); // Delete submitted questionnaire data by id.

  rpc CreateQuestionnaireData(QuestionnaireDataRequest) returns (SubmissionResponse); // Creates the questionnaire entity to be displayed at system level.
  rpc UpdateQuestionnaireData(QuestionnaireDataRequest) returns (SubmissionResponse); // Updates the questionnaire entity displayed at system level.
  rpc GetQuestionnaireData(GetQuestionnaireRequest) returns (SystemQuestionnaireData); // Get system questionnaire data by Id.
  rpc GetQuestionnaireDataList(GetQuestionnaireListRequest) returns (SystemQuestionnaireData); // Get all system questionnaire data.
  rpc DeleteQuestionnaireData(DeleteQuestionnaireRequest) returns (SubmissionResponse); // Delete submitted questionnaire data by id.

  rpc CreateClientQuestionnaireData(ClientQuestionnaireDataRequest) returns (SubmissionResponse); // Creates the questionnaire entity to be displayed at client level.
  rpc UpdateClientQuestionnaireData(ClientQuestionnaireDataRequest) returns (SubmissionResponse); // Updates the questionnaire entity displayed at client level.
  rpc GetClientQuestionnaireData(GetQuestionnaireRequest) returns (ClientQuestionnaireData); // Get client questionnaire data by Id.
  rpc GetClientQuestionnaireDataList(GetQuestionnaireListRequest) returns (ClientQuestionnaireData); // Get all client questionnaire data.
  rpc DeleteClientQuestionnaireData(DeleteQuestionnaireRequest) returns (SubmissionResponse); // Get client questionnaire data by Id.

  rpc CreateUserQuestionnaireData(UserQuestionnaireDataRequest) returns (SubmissionResponse); // Creates the questionnaire entity to be displayed at User level.
  rpc UpdateUserQuestionnaireData(UserQuestionnaireDataRequest) returns (SubmissionResponse); // Updates the questionnaire entity displayed at User level.
  rpc GetUserQuestionnaireData(GetQuestionnaireRequest) returns (UserQuestionnaireData); // Get user questionnaire by Id.
  rpc GetUserQuestionnaireDataList(GetQuestionnaireListRequest) returns (UserQuestionnaireData); // Get all user questionnaire.
  rpc DeleteUserQuestionnaireData(DeleteQuestionnaireRequest) returns (SubmissionResponse); // Delete user questionnaire data by id.
}

/*
 * Represents the request to retrieve data 
 */
 message DeleteQuestionnaireRequest {
  optional string id=1; // Questionnaire resource Id
  optional string organization_id=2; // Organization associated with the questionnaire
  optional string workspace_id=3; // Workspace associated with the questionnaire
  optional string user_id=4; // User associated with the questionnaire
} 

/*
 * Represents the request to retrieve data 
 */
message GetQuestionnaireRequest {
  optional string id=1; // Questionnaire resource Id
  cdx.opencdx.grpc.common.Pagination pagination = 2; // Pagination information and sorting.
}
/*
 * Represents the request to retrieve data
 */
message GetQuestionnaireListRequest {
  optional string id=1; // Questionnaire resource Id
  cdx.opencdx.grpc.common.Pagination pagination = 2; // Pagination information and sorting.
}

/*
 * Represents the status of a questionnaire operation.
 */
message SubmissionResponse {
  bool success = 1; // Indicates whether the operation was successful or not.
  string message = 2; // Additional message providing details about the operation status.
}

/* 
 * Represents a request to submit a FHIR questionnaire.
 */
message QuestionnaireRequest {
  Questionnaire questionnaire = 1; // The questionnaire to be submitted.
}

// TODO : Questionnaire Data Request
message QuestionnaireDataRequest {
  QuestionnaireData questionnaire_data = 1; // Questionnaire data.
}

// TODO: Client Questionnaire Data Request
message ClientQuestionnaireDataRequest {
  ClientQuestionnaireData client_questionnaire_data = 1; // Client-level FHIR questionnaire data.
}

// TODO: User Questionnaire Data Request
message UserQuestionnaireDataRequest {
  UserQuestionnaireData user_questionnaire_data = 1; // User-level FHIR questionnaire data.
}
